# xeedee

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/xeedee/: Cargo.toml
crates/xeedee-cli/: Cargo.toml
crates/xeedee-cli/examples/: ppcdis.rs
crates/xeedee-cli/src/: main.rs
crates/xeedee-ffi/: Cargo.toml
crates/xeedee-ffi/src/: inner.rs  lib.rs
crates/xeedee/src/: error.rs  lib.rs  time.rs
crates/xeedee/src/client/: engine.rs  mod.rs
crates/xeedee/src/commands/: debug_ext.rs  file.rs  fs.rs  info.rs  kv.rs  memory.rs  mod.rs  screenshot.rs
crates/xeedee/src/commands/dangerous/: drivemap.rs  pe.rs
crates/xeedee/src/commands/pix/: mod.rs  profile.rs  session.rs
crates/xeedee/src/discovery/: engine.rs  mod.rs  runner.rs
crates/xeedee/src/protocol/: mod.rs  parse.rs  response.rs  status.rs
crates/xeedee/src/transport/: mock.rs  recording.rs  tokio.rs
crates/xeedee/tests/: .snapshots_commands.rs.pending-snap  snapshots_commands.rs
crates/xeedee/tests/fixtures/: dirlist_devkit.capture  drivefreespace.capture  drivelist.capture  drivelist_360.capture  error_unknown.capture  getfile_small.capture  pix_extension_missing.capture  sendfile_small.capture
dev-tools/: cmdtbl.rs  ppcdis.rs  xexgrep.rs
src/: error.rs  lib.rs
src/client/: state.rs
src/commands/: debug.rs  kv.rs  mod.rs  perf.rs  process.rs  system.rs
src/commands/dangerous/: mod.rs  ppc.rs  sigscan.rs
src/commands/pix/: mod.rs  profile.rs  session.rs  xbm.rs
src/discovery/: wire.rs
src/protocol/: args.rs  command.rs  framing.rs  parse.rs
src/transport/: capture.rs  mod.rs
tests/: .snapshots_commands.rs.pending-snap  snapshots_commands.rs
tests/fixtures/: altaddr.capture  banner_only.capture  dbgname_get.capture  getfileattributes.capture  isstopped_running.capture  modules_small.capture  pix_handshake.capture  setmem.capture  systime.capture  threads.capture  xbeinfo_running.capture
