[package]
name = "xeedee"
version = "0.1.0"
edition = "2024"
description = "Async-first Rust reimplementation of the XBDM (Xbox Debug Monitor) protocol"
license = "MIT OR Apache-2.0"
autobins = false

[lib]
name = "xeedee"
path = "src/lib.rs"

[[bin]]
name = "xeedee"
path = "src/bin/xeedee.rs"
required-features = ["cli"]

[dependencies]
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive", "env"], optional = true }
futures-io = "0.3.32"
futures-util = { version = "0.3.32", default-features = false, features = ["std", "io"] }
image = { version = "0.25.10", default-features = false, features = ["png"], optional = true }
indicatif = { version = "0.18.4", optional = true }
jiff = { version = "0.2.23", optional = true }
memchr = "2.8.0"
owo-colors = { version = "4.3.0", optional = true, features = ["supports-colors"] }
powerpc = { version = "0.4.1", optional = true }
rootcause = "0.12.1"
tabled = { version = "0.20.0", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["net", "io-util", "rt-multi-thread", "macros", "time", "fs", "io-std"], optional = true }
tokio-util = { version = "0.7.18", features = ["compat"], optional = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"], optional = true }
winnow = "1.0.1"

[features]
default = ["cli"]
cli = [
    "tokio",
    "dep:clap",
    "dep:tracing-subscriber",
    "dep:indicatif",
    "dep:tabled",
    "dep:owo-colors",
    "dep:image",
]
tokio = ["dep:tokio", "dep:tokio-util"]
jiff = ["dep:jiff"]
image = ["dep:image"]
# Video capture support. Currently targets xbmovie's `PIX!{...}` dialect,
# which is a later-XDK variant. The xdk-main-nov11 kernel (which
# deanxbox runs) exposes the movie subsystem via `pixcmd <subcommand>`
# instead. See commands/pix/mod.rs for the full story. The module
# compiles cleanly but is not wired in by default until we re-target it
# to the real `pixcmd` protocol.
capture = []
# Dangerous, low-level commands that write into xbdm's code, dispatch
# table, or data globals. These target specific structural patterns
# rather than hardcoded addresses but any misidentification can crash
# the console. Opt-in only. See commands/dangerous/mod.rs.
dangerous = ["dep:powerpc"]

[profile.release]
lto = "thin"

[dev-dependencies]
futures = "0.3.32"
insta = "1.47.2"
tokio = { version = "1.52.1", features = ["full"] }
