[workspace]
resolver = "2"
members = [
    "crates/xeedee",
    "crates/xeedee-cli",
    "crates/xeedee-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/landaire/xeedee"

[workspace.dependencies]
bytes = "1.11.1"
futures-io = "0.3.32"
futures-util = { version = "0.3.32", default-features = false, features = ["std", "io"] }
jiff = "0.2.23"
memchr = "2.8.0"
rootcause = "0.12.1"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["net", "io-util", "rt-multi-thread", "macros", "time", "fs", "io-std"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tracing = "0.1.44"
winnow = "1.0.1"

[profile.release]
lto = "thin"
