[package]
name = "xeedee-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C/C++ FFI bindings for the `xeedee` wire-protocol surface via diplomat"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
xeedee = { path = "../xeedee", default-features = false, features = ["tokio", "jiff"] }
diplomat = "0.15"
diplomat-runtime = "0.15"
rootcause = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "time", "io-util", "macros"] }
tokio-util = { workspace = true }
