[package]
name = "xeedee"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Async-first Rust reimplementation of the XBDM (Xbox Debug Monitor) protocol"
readme = "../../README.md"
keywords = ["xbox", "xbox360", "xbdm", "devkit", "debugger"]

[lib]
name = "xeedee"
path = "src/lib.rs"

[dependencies]
bytes = { workspace = true }
futures-io = { workspace = true }
futures-util = { workspace = true }
jiff = { workspace = true, optional = true }
memchr = { workspace = true }
powerpc = { version = "0.4.1", optional = true }
rootcause = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tracing = { workspace = true }
winnow = { workspace = true }

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:tokio-util"]
jiff = ["dep:jiff"]
# Video capture (xbmovie PIX! protocol) + `.xbm` decode toolchain.
capture = []
# Dangerous, low-level commands that write into xbdm's code, dispatch
# table, or data globals. See commands/dangerous/mod.rs.
dangerous = ["dep:powerpc"]

[dev-dependencies]
futures = "0.3.32"
insta = "1.47.2"
tokio = { workspace = true, features = ["full"] }
